# meok-eu-aigc-icon-mcp

./: .gitignore  .mcp.json  README.md  SECURITY.md  acp.json  llms.txt  pyproject.toml  server.json  server.py  smithery.yaml
.well-known/: agent-card.json  agent.json  mcp-server-card.json
meok_eu_aigc_icon_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_eu_aigc.py  test_server.py
