[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meok-eu-aigc-icon-mcp"
version = "1.0.1"
description = "MEOK EU AIGC Icon MCP — EU AI Act Article 50 + Code of Practice 2nd draft AI-generated-content icon + labelling. 8 emitters for C2PA, HTML, image ICC, audio ID3, video keyframe. 2 Nov 2026 cliff. By MEOK AI Labs."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Nicholas Templeman", email = "nicholas@meok.ai" }]
keywords = ["mcp", "eu-ai-act", "article-50", "watermark", "c2pa", "aigc-icon", "code-of-practice", "meok"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Security :: Cryptography",
]
dependencies = ["mcp[cli]>=1.3.0"]

[project.urls]
Homepage = "https://meok.ai/article-50-kit"
Repository = "https://github.com/CSOAI-ORG/meok-eu-aigc-icon-mcp"

[project.scripts]
meok-eu-aigc-icon-mcp = "server:main"

[tool.setuptools]
py-modules = ["server"]
